[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "cawdrey"
version = "0.3.0"
description = "Several useful custom dictionaries for Python 📖\u2002🐍"
readme = "README.rst"
keywords = [
    "frozenordereddict",
    "orderedfrozendict",
    "frozen",
    "immutable",
    "frozendict",
    "dict",
    "dictionary",
    "map",
    "Mapping",
    "MappingProxyType",
    "Counter",
]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/cawdrey"
"Issue Tracker" = "https://github.com/domdfcoding/cawdrey/issues"
"Source Code" = "https://github.com/domdfcoding/cawdrey"
Documentation = "https://cawdrey.readthedocs.io/en/latest"
