[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "cawdrey"
version = "0.4.1"
description = "Several useful custom dictionaries for Python 📖\u2002🐍"
readme = "README.rst"
keywords = [
    "frozenordereddict",
    "orderedfrozendict",
    "frozen",
    "immutable",
    "frozendict",
    "dict",
    "dictionary",
    "map",
    "Mapping",
    "MappingProxyType",
    "Counter",
]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/cawdrey"
"Issue Tracker" = "https://github.com/domdfcoding/cawdrey/issues"
"Source Code" = "https://github.com/domdfcoding/cawdrey"
Documentation = "https://cawdrey.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "LGPL-3.0-or-later"
